# Chess.wasm

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.ts.timestamp-1679010251863.mjs
js/: package-lock.json  package.json
js/public/: index.html
js/src/: App.js
js/src/components/: SideMenu.js
js/src/engine/: README.md  chess_wasm.d.ts  chess_wasm.js  chess_wasm_bg.wasm  chess_wasm_bg.wasm.d.ts  package.json
js/src/util/: useWindowDimensions.js
js/src/wasm/: chess_wasm.d.ts  chess_wasm.js  chess_wasm_bg.wasm  chess_wasm_bg.wasm.d.ts
src/: App.css  App.tsx  chess.rs  index.css  lib.rs  test.rs
src/chess/: chess.tsx
src/components/: side-bar.tsx
src/fen/: decode.rs  mod.rs  validate.rs
src/game/: game.rs
src/hooks/: use-window-dimensions.tsx  wasm.tsx
src/notation/: algebraic.rs  mod.rs
src/pieces/: bishop.rs  en_passant.rs  king.rs  knight.rs  mod.rs  pawn.rs  queen.rs  rook.rs
wasm/: Cargo.toml  package.json
wasm/src/: chess.rs  lib.rs
wasm/src/engine/: engine.rs  evaluate.rs  minimax.rs  mod.rs
wasm/src/game/: game.rs  mod.rs
wasm/src/game/fen/: decode.rs  encode.rs  mod.rs  validate.rs
wasm/src/game/notation/: algebraic.rs  mod.rs
wasm/src/game/pieces/: bishop.rs  king.rs  knight.rs  mod.rs  pawn.rs  queen.rs  rook.rs
wasm/src/game/util/: castle.rs  check.rs  core.rs  en_passant.rs  mod.rs  promote.rs
wasm/src/test/: mod.rs  perft.rs
wasm/src/test/perft/: debug.rs
