[package]
name = "chess-wasm"
version = "0.1.0"
edition = "2021"

[profile.perft]
inherits = "dev"
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
regex = "1"
js-sys = "0.3.61"
enum_dispatch = "0.3.11"
