[package]
name = "chess-wasm"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.perft]
inherits = "release"
opt-level = 3

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
chess = "3.2.0"

[dependencies]
wasm-bindgen = "0.2"
regex = "1"
js-sys = "0.3.61"
enum_dispatch = "0.3.11"
rayon = "1.7.0"
